<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="User">
        <EditTextPreference
            app:key="username"
            app:title="username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="email"
            app:title="email"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gps_title">
        <ListPreference
            app:key="location_req_interval"
            app:title="@string/location_req_interval_title"
            app:summary="Set interval between location requests"
            app:entries="@array/location_req_interval_entries"
            app:entryValues="@array/location_req_interval_values"
            app:defaultValue="15"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/server_title">
        <SwitchPreferenceCompat
            app:key="save_remote"
            app:title="@string/save_server_title" />

        <EditTextPreference
            app:dependency="save_remote"
            app:key="server_url"
            app:title="@string/server_url"
            app:defaultValue="https://trackmymobile.vocality.fr/tracking/deviceLocation"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/local_db_title">
        <SwitchPreferenceCompat
            app:key="save_local"
            app:title="@string/save_local_db" />
    </PreferenceCategory>
</PreferenceScreen>